project(push-connector-c)
cmake_minimum_required(VERSION 3.1)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
aux_source_directory(. SRC_LIST)
file(GLOB_RECURSE INC_LIST "*.h")
add_executable(${PROJECT_NAME} ${SRC_LIST} ${INC_LIST})
target_link_libraries(${PROJECT_NAME} uv cassandra)
